# SysTrace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml
scripts/: embed_index.py  embed_logo.py  generate_icon.py
src/: collector.cpp  collector.h  embed_index.h  embed_logo.h  http_server.cpp  http_server.h  json_serializer.cpp  json_serializer.h  persistence.cpp  persistence.h  ring_buffer.h  systrace.rc  tray_icon.cpp  tray_icon.h
web/: app.js  index.html  style.css
